structure html & css complete start javascript
daje

--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,21 @@
     box-sizing: border-box;
 }
 
+/* GENERAL RULEZ */
+
 body{
     
-    background-color: coral;
 }
 
 .container{
-    /* delete */
-    height: 800px;
-    /* delete */
-    /* height: 100vh; */
+    height: 100vh;
     width: 100%;
-    background-color: violet;
+    background-color: rgb(255, 80, 240);
 }
+
+/* FINE GENERAL RULEZ */
+
+/* PARTE HEADER */
 .header-top{
     font-family: 'Roboto', sans-serif;
     font-size: 1.8rem;
@@ -30,14 +32,26 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 2.8rem;
+    color: orange
+}
+/* FINE PARTE HEADER */
+
+
+
+/* INIZIO MAIN */
+
+
+.container-icone{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-
-
-main{
-    /* delete */
-    height: 500px;
-    /* delete */
-    background-color: #fff;
-    width: 100%;
+.container-icone .icon{
+    flex-basis: calc(100% / 5 - 36px);
+    padding: 15px;
+    margin: 10px 18px;
+    background-color: aqua;
+    border-radius: 10px;
 }
