--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 .container{
     height: 100vh;
     width: 100%;
-    background-color: rgb(255, 80, 240);
+    background-color: rgba(50, 146, 146, 0.438);
 }
 
 /* FINE GENERAL RULEZ */
@@ -52,6 +52,8 @@ body{
     flex-basis: calc(100% / 5 - 36px);
     padding: 15px;
     margin: 10px 18px;
-    background-color: aqua;
     border-radius: 10px;
+    border: 1px solid blue;
+    text-align: center;
+    font-size: 40px;
 }
