push prova with img

--- a/Esercizio js6 provato con le img/css/style.css
+++ b/Esercizio js6 provato con le img/css/style.css
@@ -8,6 +8,7 @@
 
 
 .container{
+    background-image: url('https://www.breakinghotel.com/wp-content/uploads/2017/07/sport-1200x750.jpg');
     height: 100vh;
     width: 100%;
 }
@@ -19,12 +20,13 @@
     font-family: 'Roboto', sans-serif;
     font-size: 1.8rem;
     height: 80px;
-    background-color: chartreuse;
+    
 }
+
+
 
 .header-bottom{
     height: 100px;
-    background-color: blue;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +39,6 @@
 
 /* INIZIO MAIN */
 
-
 .container-immagini{
     display: flex;
     justify-content: space-between;
@@ -45,19 +46,30 @@
 }
 
 .container-immagini .immagine{
-    flex-basis: calc(100% / 5 - 36px);
-    padding: 15px;
-    margin: 10px 18px;
+    flex-basis: calc(100% / 6 - 20px);
+    padding: 4px;
+    margin: 5px 10px;
+    height: 120px;
     border-radius: 10px;
-    border: 1px solid blue;
     text-align: center;
-    font-size: 40px;
+    font-size: 15px;
 }
 
 .immagine img{
-    width: 100%;
-    height: 40%;
+    width: 40%;
+    height: 35%;
     background-position: center;
     background-size: cover;
     
 }
+
+.title{
+    line-height: 1.9;
+    font-size: 14px;
+}
+
+/* .title{
+    background: linear-gradient(to left, rgba(255, 217, 0, 0.582), orange, yellow);
+    background: linear-gradient(to right, rgba(54, 105, 54, 0.459), green, lightgreen);
+    background: linear-gradient(to top, rgba(209, 77, 77, 0.856), white, red);
+} */
