--- a/Esercizio js6 provato con le img/css/style.css
+++ b/Esercizio js6 provato con le img/css/style.css
@@ -46,18 +46,19 @@
 }
 
 .container-immagini .immagine{
-    flex-basis: calc(100% / 6 - 20px);
-    padding: 4px;
+    position: relative;
+    flex-basis: calc(100% / 7 - 20px);
+    padding: 10px;
     margin: 5px 10px;
     height: 120px;
     border-radius: 10px;
     text-align: center;
-    font-size: 15px;
+    font-size: 1.8rem;
 }
 
 .immagine img{
-    width: 40%;
-    height: 35%;
+    width: 100%;
+    height: 100%;
     background-position: center;
     background-size: cover;
     
@@ -66,6 +67,11 @@
 .title{
     line-height: 1.9;
     font-size: 14px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.342);
 }
 
 /* .title{
