--- a/Esercizio js6 provato con le img/css/style.css
+++ b/Esercizio js6 provato con le img/css/style.css
@@ -59,6 +59,7 @@
 .immagine img{
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     background-position: center;
     background-size: cover;
     
